[gd_scene load_steps=32 format=2]

[ext_resource path="res://Player/Scenes/Gun.gd" type="Script" id=1]
[ext_resource path="res://Player/Scenes/Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Scenes/GunStates.gd" type="Script" id=3]
[ext_resource path="res://Player/Scenes/Smoking.gd" type="Script" id=4]
[ext_resource path="res://Player/Scenes/Smoke.gd" type="Script" id=5]
[ext_resource path="res://Player/Sprites/gun/KABANG!_GUN_TEST.png" type="Texture" id=6]
[ext_resource path="res://Player/Sprites/gun/KABANG!_MUZZLE_TEST.png" type="Texture" id=7]
[ext_resource path="res://Player/Scripts/CasingEjector.gd" type="Script" id=8]
[ext_resource path="res://Player/Sprites/crosshair/6crosshair2.png" type="Texture" id=9]
[ext_resource path="res://Player/Scripts/Gun_Timers.gd" type="Script" id=10]
[ext_resource path="res://Player/Scenes/ShootSpeed.gd" type="Script" id=11]
[ext_resource path="res://Player/Scenes/ReloadSpeed.gd" type="Script" id=12]
[ext_resource path="res://Player/Scenes/Recoil_timer.gd" type="Script" id=13]
[ext_resource path="res://Player/Scenes/War FX Gun Shot 001.wav" type="AudioStream" id=14]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 1, 1, 0.11, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]

flags = 4
gradient = SubResource( 1 )
width = 2048

[sub_resource type="Curve" id=3]

min_value = 0.0
max_value = 50.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 214.914, 0, 0, Vector2( 0.5826, 50 ), 38.4562, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]

flags = 4
width = 2048
curve = SubResource( 3 )

[sub_resource type="Curve" id=5]

min_value = -0.01
max_value = 0.01
bake_resolution = 102
_data = [ Vector2( 0, -0.00296875 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.00166992 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]

flags = 4
width = 2048
curve = SubResource( 5 )

[sub_resource type="Curve" id=7]

min_value = 0.0
max_value = 4.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 4 ), 8.72925, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]

flags = 4
width = 2048
curve = SubResource( 7 )

[sub_resource type="Gradient" id=9]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=10]

flags = 4
gradient = SubResource( 9 )
width = 2048

[sub_resource type="Curve" id=11]

min_value = 0.0
max_value = 2.0
bake_resolution = 100
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.944336 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]

flags = 4
width = 1375
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]

render_priority = 0
trail_divisor = 64
trail_size_modifier = SubResource( 12 )
trail_color_modifier = SubResource( 10 )
emission_shape = 2
emission_box_extents = Vector3( 4, 0, 0 )
flag_align_y = true
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, -160, 0 )
initial_velocity = 3.0
initial_velocity_random = 1.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.01
orbit_velocity_random = 1.0
orbit_velocity_curve = SubResource( 6 )
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 16.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 1.0
damping_curve = SubResource( 4 )
angle = -378.3
angle_random = 0.0
scale = 2.0
scale_random = 0.0
scale_curve = SubResource( 8 )
color_ramp = SubResource( 2 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Damping", "Emission Shape", "Flags", "Gravity", "Initial Velocity", "Tangential Accel", "Trail" ]

[sub_resource type="Animation" id=14]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=15]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 60.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -30, -15 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=16]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 30, -15 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=17]

custom_solver_bias = 0.0
radius = 1.0

[node name="Gun" type="Node2D"]

position = Vector2( -1, 5 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
bullet_scene = ExtResource( 2 )

[node name="States" type="Node2D" parent="." index="0"]

editor/display_folded = true
script = ExtResource( 3 )

[node name="Holstered" type="Node2D" parent="States" index="0"]

[node name="Unholstered" type="Node2D" parent="States" index="1"]

[node name="Reloading" type="Node2D" parent="States" index="2"]

[node name="Chambering" type="Node2D" parent="States" index="3"]

[node name="Smoking" type="Node2D" parent="States" index="4"]

editor/display_folded = true
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="States/Smoking" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Smoke" type="Node2D" parent="." index="1"]

editor/display_folded = true
visible = false
rotation = -1.5708
z_index = -1
script = ExtResource( 5 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="Particles" type="Node2D" parent="Smoke" index="0"]

editor/display_folded = true

[node name="Particles2D" type="Particles2D" parent="Smoke/Particles" index="0"]

emitting = true
amount = 640
lifetime = 1.0
one_shot = false
preprocess = 1.0
speed_scale = 0.4
explosiveness = 0.04
randomness = 1.0
fixed_fps = 64
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 13 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform" ]

[node name="Particles2D11" type="Particles2D" parent="Smoke/Particles" index="1"]

emitting = true
amount = 640
lifetime = 1.0
one_shot = false
preprocess = 1.0
speed_scale = 0.4
explosiveness = 0.04
randomness = 1.0
fixed_fps = 64
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 13 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform" ]

[node name="Particles2D7" type="Particles2D" parent="Smoke/Particles" index="2"]

emitting = true
amount = 640
lifetime = 1.0
one_shot = false
preprocess = 1.0
speed_scale = 0.4
explosiveness = 0.04
randomness = 1.0
fixed_fps = 64
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 13 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform" ]

[node name="Particles2D13" type="Particles2D" parent="Smoke/Particles" index="3"]

emitting = true
amount = 640
lifetime = 1.0
one_shot = false
preprocess = 1.0
speed_scale = 0.4
explosiveness = 0.04
randomness = 1.0
fixed_fps = 64
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 13 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform" ]

[node name="Particles2D2" type="Particles2D" parent="Smoke/Particles" index="4"]

emitting = true
amount = 640
lifetime = 1.0
one_shot = false
preprocess = 1.0
speed_scale = 0.4
explosiveness = 0.04
randomness = 1.0
fixed_fps = 64
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 13 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform" ]

[node name="Particles2D9" type="Particles2D" parent="Smoke/Particles" index="5"]

emitting = true
amount = 640
lifetime = 1.0
one_shot = false
preprocess = 1.0
speed_scale = 0.4
explosiveness = 0.04
randomness = 1.0
fixed_fps = 64
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 13 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform" ]

[node name="Particles2D5" type="Particles2D" parent="Smoke/Particles" index="6"]

emitting = true
amount = 640
lifetime = 1.0
one_shot = false
preprocess = 1.0
speed_scale = 0.4
explosiveness = 0.04
randomness = 1.0
fixed_fps = 64
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 13 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform" ]

[node name="Particles2D15" type="Particles2D" parent="Smoke/Particles" index="7"]

emitting = true
amount = 640
lifetime = 1.0
one_shot = false
preprocess = 1.0
speed_scale = 0.4
explosiveness = 0.04
randomness = 1.0
fixed_fps = 64
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 13 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform" ]

[node name="Particles2D3" type="Particles2D" parent="Smoke/Particles" index="8"]

emitting = true
amount = 640
lifetime = 1.0
one_shot = false
preprocess = 1.0
speed_scale = 0.4
explosiveness = 0.04
randomness = 1.0
fixed_fps = 64
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 13 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform" ]

[node name="Particles2D10" type="Particles2D" parent="Smoke/Particles" index="9"]

emitting = true
amount = 640
lifetime = 1.0
one_shot = false
preprocess = 1.0
speed_scale = 0.4
explosiveness = 0.04
randomness = 1.0
fixed_fps = 64
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 13 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform" ]

[node name="Particles2D6" type="Particles2D" parent="Smoke/Particles" index="10"]

emitting = true
amount = 640
lifetime = 1.0
one_shot = false
preprocess = 1.0
speed_scale = 0.4
explosiveness = 0.04
randomness = 1.0
fixed_fps = 64
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 13 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform" ]

[node name="Particles2D16" type="Particles2D" parent="Smoke/Particles" index="11"]

emitting = true
amount = 640
lifetime = 1.0
one_shot = false
preprocess = 1.0
speed_scale = 0.4
explosiveness = 0.04
randomness = 1.0
fixed_fps = 64
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 13 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform" ]

[node name="Particles2D4" type="Particles2D" parent="Smoke/Particles" index="12"]

emitting = true
amount = 640
lifetime = 1.0
one_shot = false
preprocess = 1.0
speed_scale = 0.4
explosiveness = 0.04
randomness = 1.0
fixed_fps = 64
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 13 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform" ]

[node name="Particles2D12" type="Particles2D" parent="Smoke/Particles" index="13"]

emitting = true
amount = 640
lifetime = 1.0
one_shot = false
preprocess = 1.0
speed_scale = 0.4
explosiveness = 0.04
randomness = 1.0
fixed_fps = 64
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 13 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform" ]

[node name="Particles2D8" type="Particles2D" parent="Smoke/Particles" index="14"]

emitting = true
amount = 640
lifetime = 1.0
one_shot = false
preprocess = 1.0
speed_scale = 0.4
explosiveness = 0.04
randomness = 1.0
fixed_fps = 64
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 13 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform" ]

[node name="THE1" type="Particles2D" parent="Smoke/Particles" index="15"]

emitting = true
amount = 3200
lifetime = 1.0
one_shot = false
preprocess = 1.0
speed_scale = 0.6
explosiveness = 0.04
randomness = 1.0
fixed_fps = 64
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 13 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform" ]

[node name="GunAiming" type="Node2D" parent="." index="2"]

_sections_unfolded = [ "Transform", "Z Index" ]

[node name="GunRotator" type="Node2D" parent="GunAiming" index="0"]

visible = false
position = Vector2( 20, 4 )
rotation = -1.5708
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="GunAiming/GunRotator" index="0"]

z_index = 5
texture = ExtResource( 6 )
offset = Vector2( 4, 0 )
_sections_unfolded = [ "Animation", "Offset", "Transform", "Visibility", "Z Index" ]

[node name="Position2D" type="Position2D" parent="GunAiming/GunRotator/Sprite" index="0"]

position = Vector2( 9, 0 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="GunAiming/GunRotator/Sprite" index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 0.1
anims/recoil_idle = SubResource( 14 )
anims/recoil_left = SubResource( 15 )
anims/recoil_right = SubResource( 16 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="BarrelEnd" type="Position2D" parent="GunAiming/GunRotator/Sprite" index="2"]

editor/display_folded = true
position = Vector2( 9, 20 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="GunAiming/GunRotator/Sprite/BarrelEnd" index="0"]

visible = false
texture = ExtResource( 7 )
offset = Vector2( 1, 9 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Area2D" type="Area2D" parent="GunAiming/GunRotator/Sprite/BarrelEnd" index="1"]

editor/display_folded = true
position = Vector2( 0, 5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GunAiming/GunRotator/Sprite/BarrelEnd/Area2D" index="0"]

shape = SubResource( 17 )

[node name="CasingEjector" type="Node2D" parent="GunAiming/GunRotator/Sprite" index="3"]

script = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="Position2D" type="Position2D" parent="GunAiming/GunRotator/Sprite/CasingEjector" index="0"]

_sections_unfolded = [ "Transform" ]

[node name="CrosshairRotator" type="Node2D" parent="GunAiming" index="1"]

editor/display_folded = true
position = Vector2( 100, 0 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Sprite" type="Sprite" parent="GunAiming/CrosshairRotator" index="0"]

editor/display_folded = true
texture = ExtResource( 9 )
offset = Vector2( 0, -4 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Position2D" type="Position2D" parent="GunAiming/CrosshairRotator/Sprite" index="0"]

position = Vector2( -0.5, -4 )
_sections_unfolded = [ "Transform" ]

[node name="GunHolster" type="Node2D" parent="." index="3"]

editor/display_folded = true
visible = false
z_index = 1
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="Sprite" type="Sprite" parent="GunHolster" index="0"]

position = Vector2( -5, 10 )
_sections_unfolded = [ "Offset", "Transform", "Z Index" ]

[node name="Gun_timers" type="Node2D" parent="." index="4"]

editor/display_folded = true
script = ExtResource( 10 )
_sections_unfolded = [ "Transform" ]

[node name="ShootSpeed_timer" type="Timer" parent="Gun_timers" index="0"]

process_mode = 1
wait_time = 0.3
one_shot = false
autostart = false
script = ExtResource( 11 )

[node name="ReloadSpeed_timer" type="Timer" parent="Gun_timers" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false
script = ExtResource( 12 )

[node name="Recoil_timer" type="Timer" parent="Gun_timers" index="2"]

process_mode = 1
wait_time = 0.05
one_shot = true
autostart = false
script = ExtResource( 13 )

[node name="MuzzleFlare_timer" type="Timer" parent="Gun_timers" index="3"]

process_mode = 1
wait_time = 0.08
one_shot = true
autostart = false

[node name="Sounds" type="Node2D" parent="." index="5"]

editor/display_folded = true

[node name="Shot" type="AudioStreamPlayer" parent="Sounds" index="0"]

stream = ExtResource( 14 )
volume_db = 0.0
pitch_scale = 0.9
autoplay = false
mix_target = 2
bus = "Master"

[connection signal="timeout" from="Gun_timers/ShootSpeed_timer" to="." method="_on_ShootSpeed_timer_timeout"]

[connection signal="timeout" from="Gun_timers/Recoil_timer" to="." method="_on_Recoil_timer_timeout"]

[connection signal="timeout" from="Gun_timers/MuzzleFlare_timer" to="." method="_on_MuzzleFlare_timer_timeout"]


